--- a/doc/vortrag.tex
+++ b/doc/vortrag.tex
@@ -8,9 +8,11 @@
 \begin{document}
     \maketitle
     \begin{frame}
-    \frametitle{}
+    \frametitle{Person}
     \begin{itemize}
-        \item{aus Gründen}
+        \item{Jonathan Sieber}
+        \item{Informatikstudent im 7. Semester}
+        \item{Interessen: Spieleentwicklung, Systemprogrammierung, HW-Entwicklung}
     \end{itemize}
     \end{frame}
     
@@ -50,25 +52,14 @@
             \item{64 Sprites}
         \end{itemize}
     \end{frame}
-    
-    \begin{frame}
-        \frametitle{Background Layer}
-        \includegraphics[width=0.8\linewidth]{img/smb_bg.png}
-    \end{frame}
-    
-    
-    \begin{frame}
-        \frametitle{Sprite Layer}
-        \includegraphics[width=0.8\linewidth]{img/smb_sprite.png}
-    \end{frame}
-    
+        
     \begin{frame}
         \frametitle{Ausgangslage}
 %            \begin{column}{5cm}
-            \begin{block}{5cm}
-                \includegraphics{img/danleach.jpg}
-            \end{block}
+%            \begin{block}{5cm}
+%            \end{block}
 %            \begin{column}
+                \includegraphics{img/danleach.jpg}
                 \begin{itemize}
                     \item{Master Thesis von Dan Leach (Bradley University)}
                     \item{Ersetzt die CPU aus Original-Hardware}
@@ -99,4 +90,27 @@
         \end{itemize}
     \end{frame}
     
+    
+    \begin{frame}
+        \frametitle{Background Layer}
+        \includegraphics[width=0.8\linewidth]{img/smb_bg.png}
+    \end{frame}
+    
+    
+    \begin{frame}
+        \frametitle{Sprite Layer}
+        \includegraphics[width=0.8\linewidth]{img/smb_sprite.png}
+    \end{frame}
+    
+    
+    \begin{frame}
+        \frametitle{Pattern Table}
+        \includegraphics[width=0.8\linewidth]{img/pattern.png}
+        \begin{itemize}
+                \item{Background-Tiles definieren Palette per 16x16 Pixel}
+                \item{Sprites haben eigene Paletten}
+                \item{Dies sind alle Grafiken aus Super Mario}
+        \end{itemize}
+    \end{frame}
+
 \end{document}
