--- a/doc/vortrag.tex
+++ b/doc/vortrag.tex
@@ -2,17 +2,29 @@
 \usepackage[utf8]{inputenc}
 \usetheme{Warsaw}
 
+
+\usepackage{tikz}
+\usetikzlibrary{arrows}
+
 \title{Nintendo Entertainment System}
 \author{Jonathan Sieber}
 
 \begin{document}
-    \maketitle
+    \begin{frame}
+        \maketitle
+        \begin{center}
+            \includegraphics[height=0.4\textheight]{img/nes.jpg}
+        \end{center}
+    \end{frame}
+    
     \begin{frame}
     \frametitle{Person}
     \begin{itemize}
         \item{Jonathan Sieber}
         \item{Informatikstudent im 7. Semester}
-        \item{Interessen: Spieleentwicklung, Systemprogrammierung, HW-Entwicklung}
+        \item{Seit 2007 freiberufliche Arbeit in Spieleentwicklung}
+        \item{Mitarbeit an Landwirtschaftssimulator 2010, Demolition Company}
+        \item{Besonderes Interesse an Systemprogrammierung, Portierung}
     \end{itemize}
     \end{frame}
     
@@ -22,86 +34,126 @@
         \includegraphics[width=0.8\linewidth]{img/smb.png}
     \end{frame}
     
+    
+        
     \begin{frame}
-        \frametitle{Nintendo Entertainment System}
-        \begin{itemize}
-            \item{1983 als Nintendo Famicom in Japan veröffentlicht}
-            \item{Erste erfolgreiche Konsole nach dem Video Game Crash}
-            \item{Programm/Grafik-Speicher durch Cartridges leicht erweiterbar}
-        \end{itemize}
+        \frametitle{Geschichte}
+        \begin{columns}
+             \column{.45\textwidth}
+                \includegraphics[width=1.1\textwidth]{img/nes.jpg}
+                
+             \column{.55\textwidth}
+             
+                \begin{itemize}
+                    \item{1983 als Nintendo Famicom in Japan veröffentlicht}
+                    \item{Spiele erschienen bis 1996}
+                    \item{Große Fangemeinde und aktive Emulator-Szene}
+                \end{itemize}
+        \end{columns}
     \end{frame}
+    
+    
+    \begin{frame}
+        \frametitle{Hardwareübersicht}
+        \includegraphics[width=0.8\textwidth]{img/system1.pdf}
+    \end{frame}
+    
     
     \begin{frame}
         \frametitle{CPU}
         \begin{itemize}
             \item{Custom Chip Ricoh 2A03 @ 1.76 MHz}
             \item{Basiert auf MOS Technology 6502}
-            \item{Enthält Soundchip mit 5 Tongeneratoren}
-            \item{DMA-Kanal für Sprite-Updates auf PPU}
-            \item{Schon 1983 langsam, Innovation auf PPU}
+            \item{Enthält Soundgenerator}
+            \item{DMA-Einheit für Sprite-Updates auf PPU}
         \end{itemize}
     \end{frame}
     
     \begin{frame}
-        \frametitle{CPU}
+        \frametitle{PPU}
         \begin{itemize}
             \item{Ricoh RP2C02}
             \item{@5.37 Mhz = NTSC Pixel Clock}
-            \item{Gibt direkt analoges NTSC-Signal aus, kein Framebuffer}
-            \item{1 Background Layer}
+            \item{1 Background Layer mit flüssigem Scrolling}
             \item{64 Sprites}
         \end{itemize}
     \end{frame}
-        
+
     \begin{frame}
-        \frametitle{Ausgangslage}
-%            \begin{column}{5cm}
-%            \begin{block}{5cm}
-%            \end{block}
-%            \begin{column}
-                \includegraphics{img/danleach.jpg}
-                \begin{itemize}
-                    \item{Master Thesis von Dan Leach (Bradley University)}
-                    \item{Ersetzt die CPU aus Original-Hardware}
-                    \item{Basiert selbst auf 6502-Implementierung von fpgaarcade.com}
-                    \item{Konnte mit geringen Anpassungen verwendet werden}
-                    \item{Noch ohne Soundgenerator}
-                \end{itemize}
-%            \end{column}
-%        \end{columns}
+        \frametitle{Cartridges}
+        \begin{itemize}
+            \item{Direkt am Systembus angebundene Steckkarten}
+            \item{32k Programmcode und 8k Grafikdaten direkt addressierbar}
+            \item{Spätere Spiele benutzen wesentlich mehr}
+        \end{itemize}
     \end{frame}
     
+    \begin{frame}
+        \frametitle{Moderne Umsetzung}
+        \includegraphics<1>[width=0.8\textwidth]{img/system1.pdf}
+        \includegraphics<2>[width=0.8\textwidth]{img/system2.pdf}
+    \end{frame}
     
     \begin{frame}
-        \frametitle{Bereits geschafft}
+        \frametitle{HDMI-Ausgabe}
         \begin{itemize}
             \item{HDMI Ausgabe}
-            \item{System mit Super Mario ROM}
-            \item{PPU Background Layer}
+            \item{Übernommen aus EDK-Modul xps\_tft}
+            \item{256x240 Pixel Framebuffer im FPGA-internen Block-RAM}
+            \item{Ausgabe auf 640x480}
+            \item{Höhere Auflösung und bessere Skalierung geplant}
         \end{itemize}
     \end{frame}
     
     \begin{frame}
-        \frametitle{Noch zu tun}
+        \frametitle{System Aufbau für Super Mario Bros.}
         \begin{itemize}
-            \item{PPU Scrolling, Sprites und weitere Details}
-            \item{Controller Input}
-            \item{Memory Mapper für größere Spiele}
+            \item{Geräte am CPU-BUS zusammenhängen und multiplexen}
+            \item{NES ROM Files für SMB einlesen und ROM beschreiben}
+            \item{PPU und HDMIOut mit Framebuffer verbinden}
         \end{itemize}
     \end{frame}
     
+        
+    \begin{frame}
+        \frametitle{Umsetzung CPU} 
+        \begin{columns}
+             \column{.45\textwidth}
+                \includegraphics[width=1.1\textwidth]{img/danleach.jpg}
+             \column{.55\textwidth}
+                \begin{itemize}
+                    \item{Master's Project von Dan Leach (Bradley University)}
+                    \item{Ersetzt die CPU aus Original-Hardware}
+                    \item{Basiert selbst auf 6502-Implementierung von fpgaarcade.com}
+                    \item{Noch ohne Soundgenerator}
+                \end{itemize}
+        \end{columns}
+    \end{frame}
     
     \begin{frame}
-        \frametitle{Background Layer}
-        \includegraphics[width=0.8\linewidth]{img/smb_bg.png}
+        \frametitle{Probleme}        
+        \begin{columns}
+             \column{.45\textwidth}
+                \includegraphics[width=1.1\textwidth]{img/danleach.jpg}
+             \column{.55\textwidth}
+                \begin{itemize}
+                    \item{6502 verwendet mehrphasigen Clock}
+                    \item{Clock Divider Konzept problematisch, kein DCM/PLL}
+                    \item{Lief nicht nach der Synthese}
+                    \item{Umbau auf Clock Enables}
+                \end{itemize}
+        \end{columns}
     \end{frame}
     
     
     \begin{frame}
-        \frametitle{Sprite Layer}
-        \includegraphics[width=0.8\linewidth]{img/smb_sprite.png}
+        \frametitle{PPU Dokumentation}
+        \begin{itemize}
+            \item{Viel Doku aus Emulator-Szene}
+            \item{Informelle Verhaltensbeschreibungen aller Komponenten}
+            \item{Besonders viele wichtige Details zu PPU}
+        \end{itemize}
     \end{frame}
-    
     
     \begin{frame}
         \frametitle{Pattern Table}
@@ -112,5 +164,31 @@
                 \item{Dies sind alle Grafiken aus Super Mario}
         \end{itemize}
     \end{frame}
+    
+    \begin{frame}
+        \frametitle{Background Layer}
+        \includegraphics[width=0.8\linewidth]{img/smb_bg.png}
+    \end{frame}
+    
+    
+    \begin{frame}
+        \frametitle{Sprite Layer}
+        \includegraphics[width=0.8\linewidth]{img/smb_sprite.png}
+    \end{frame}    
+    
+    \begin{frame}
+        \frametitle{Hardwareübersicht}
+        \includegraphics<2>[width=0.8\textwidth]{img/system2.pdf}
+        \includegraphics<3>[width=0.8\textwidth]{img/system3.pdf}
+    \end{frame}
+    
+   
+    \begin{frame}
+        \frametitle{Ende}
+        \begin{itemize}
+            \item{Fragen?}
+        \end{itemize}
+    \end{frame}
+    
 
 \end{document}
